[gd_scene load_steps=10 format=3 uid="uid://bkxnolp6vti0a"]

[ext_resource type="Script" path="res://Scenes/Levels/Scene_LevelTest.gd" id="1_1ycfu"]
[ext_resource type="PackedScene" uid="uid://bggctsc4c1whd" path="res://Scenes/Player/Scene_PlayerCat.tscn" id="1_acx2b"]
[ext_resource type="Texture2D" uid="uid://bmhavdsc42vjr" path="res://Sprites/Placeholders/HUD/Placeholder_Invulnerability.png" id="3_bwvqo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50rn6"]
size = Vector2(50.25, 46.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xq2c8"]
size = Vector2(88.7098, 49.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_dvl6d"]
radius = 59.0762

[sub_resource type="Animation" id="Animation_eoy0g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_13ogm"]
resource_name = "rotation"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.26573]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tr5gd"]
_data = {
"RESET": SubResource("Animation_eoy0g"),
"rotation": SubResource("Animation_13ogm")
}

[node name="SceneLevelTest" type="Node"]
script = ExtResource("1_1ycfu")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(1268, 791)

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_right = 197.0
offset_bottom = 197.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(98.5, 96.5)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_50rn6")

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2(-9, 981)
scale = Vector2(9.92, 0.55)

[node name="ColorRect" type="ColorRect" parent="Floor2"]
offset_left = -54.0
offset_right = 301.0
offset_bottom = 197.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
position = Vector2(123.488, 98.5)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_xq2c8")

[node name="ScenePlayerCat" parent="." instance=ExtResource("1_acx2b")]
position = Vector2(441, 611)

[node name="boxSpawn" type="Marker2D" parent="."]
position = Vector2(1016, 482)

[node name="ProjectileSpawn" type="Marker2D" parent="."]
position = Vector2(2060, 228)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-500, 750)
texture = ExtResource("3_bwvqo")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("CircleShape2D_dvl6d")
debug_color = Color(0.6, 0.541176, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tr5gd")
}
autoplay = "rotation"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
